fix(Button): remove wrong color from text Button style

--- a/packages/react-components/src/components/Button/styles/kind.scss
+++ b/packages/react-components/src/components/Button/styles/kind.scss
@@ -121,7 +121,6 @@
   text-decoration: underline;
   text-decoration-skip-ink: none;
   text-underline-position: from-font;
-  color: var(--action-high-contrast-default);
 
   &:hover {
     color: var(--action-high-contrast-hover);
